* Added support to the grammar allowing `List` and `Map` key declarations for `Map` entries.
* Improved performance of comparison (equals) between not compatible types and nulls.
* Introduced `Writing` and `Deleting` marker interfaces to identify whether a step can perform write or delete or both on Graph.
* Added static map capturing possible Traversal steps that shall be added to traversal for a given operator

[[release-3-6-2]]
=== TinkerPop 3.6.2 (Release Date: January 16, 2023)

This release also includes changes from <<release-3-5-5, 3.5.5>>.

* Fixed bug in the Gremlin grammar for parsing of empty queries.
* Provided mechanism for provider plugins to get notified on script/query processing via `GraphManager`.
* Fixed bug in `select()` when using multiple labels.
* Moved Gherkin feature tests to `gremlin-test` resources so that they are more easily referenced by providers.
* Made quality of life changes to semantics for `mergeV/E` based on initial feedback.

==== Bugs
* TINKERPOP-2765 Race condition during script creation when using UnifiedChannelizer
* TINKERPOP-2769 gremlin-server does not reply with a timeout response to all timed out requests
* TINKERPOP-2771 Critical severity security vulnerabilty in commons-configuration 2.7
* TINKERPOP-2796 High severity security vulnerability found in snakeyaml
* TINKERPOP-2801 Incorrect deprecation notice on gremlin-python
* TINKERPOP-2803 Incorrect count() with sample() in TinkerGraph
* TINKERPOP-2805 No results returned for multiple labels to select()
* TINKERPOP-2809 High severity security vulnerability found in jackson databind
* TINKERPOP-2815 Critical security vulnerability for apache commons-text
* TINKERPOP-2816 Gherkin test issues for implementers
* TINKERPOP-2817  "Could not find a type identifier for the class : class java.lang.Byte" occurs when dumping graph to graphson format
* TINKERPOP-2826 Critical security vulnerability in ivy
* TINKERPOP-2836 Github actions do not run java driver integration tests